# actix-tictactoe

./: .env.example  Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs  main.rs  middleware.rs  state.rs  utils.rs
api/src/routes/: auth.rs  game.rs  mod.rs  websocket.rs
db/: Cargo.toml
db/migrations/: 20251126122659_create_users.sql
db/src/: db.rs  lib.rs  pool.rs
db/src/models/: user.rs
db/src/queries/: auth.rs
ws/: Cargo.toml
ws/src/: connection_registry.rs  handler.rs  lib.rs  manager.rs  messages.rs  pubsub.rs  room.rs
ws/src/game/: game_logic.rs  game_manager.rs  game_state.rs  messages.rs  mod.rs
