[package]
name = "tic-tac"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
actix-web-lab = "0.21"
anyhow = "1.0.100"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { workspace = true, features = ["full"]}
db = { path = "../db" }
uuid = { version = "1.18.1", features = ["v4"] }
dotenvy.workspace = true
bcrypt = "0.17.1"
jsonwebtoken = {version =  "10.2.0", features=["rust_crypto"]}
chrono = "0.4.42"
