[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy.workspace = true
serde_json = "1.0"
serde = {version ="1.0.228", features=["derive"]}

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }
# tokio = { workspace = true, features = ["full"] }
uuid = {version = "1.18.1", features=["v4", "serde"]}
chrono = { version = "0.4.42", features = ["serde"] }
