[package]
name = "ws"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4.12.1"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
anyhow = "1.0.100"
dashmap = "6.1.0"
futures-util = "0.3.31"
redis = {version = "0.32.7", features=["tokio-comp"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0"
tokio.workspace = true
uuid = {version = "1.18.1", features = ["serde", "v4"]}

# futures-util = "0.3.31"
# tokio = { workspace = true, features = ["full"] }
# tokio-tungstenite = "0.28.0"
# tungstenite = "0.28.0"
